fix shadow overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,6 +46,7 @@ body {
     &::after {
         content: '';
         position: absolute;
+        z-index: -1;
         bottom: 0;
         left: 50%;
 
